# deepseek-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
chat/: Cargo.toml
chat/src/: main.rs
engine/: Cargo.toml
engine/src/: engine.rs  gguf.rs  lib.rs  model.rs  session.rs  tokenizer.rs
engine/src/kernels/: attention.rs  embed.rs  hc.rs  indexer.rs  kv_cache.rs  matmul.rs  mod.rs  moe.rs  norm.rs  quantize.rs  rope.rs  utils.rs
engine/tests/: gguf_parse.rs  golden_bos.rs  kernels_smoke.rs  quant_cpu.rs  tokenizer_encode.rs
